<resources>
    <string name="app_name">keyShard</string>
    <!--权限申请-->
    <string name="permissionFailureTitleText">权限申请失败</string>
    <string name="permissionFailureMessageText">我们需要的一些权限申请失败，请您到设置页面手动授权，否则功能无法正常使用！</string>
    <string name="permissionFailureButtonText">设置</string>
    <string name="permissionRationaleTitleText">授权已被拒绝</string>
    <string name="permissionRationaleMessageText">您已经拒绝过授权此权限，没有此权限功能无法正常使用，赶快授权此权限给我们！</string>
    <string name="permissionRationalePositiveButtonText">授权</string>
    <string name="permissionRationaleNegativeButtonText">拒绝</string>
    <string name="account_activation">账户激活</string>
    <string name="activate">激活</string>
    <string name="phone_number_required">手机号码不能为空</string>
    <string name="invalid_phone_number">无效手机号码</string>
    <string name="sms_code_required">验证码不能为空</string>
    <string name="custodian_wallet">托管钱包</string>
    <string name="create">创建</string>
    <string name="restore">恢复</string>
    <string name="my_custodian_wallets">我的托管钱包</string>
    <string name="backup">备份</string>
    <string name="no_custodian_wallet">暂无托管钱包</string>
    <string name="create_custodian_wallet">创建托管钱包</string>
    <string name="restore_custodian_wallet">恢复托管钱包</string>
    <string name="asset_balance">资产余额</string>
    <string name="send">发送</string>
    <string name="receive">接收</string>
    <string name="received">接收</string>
    <string name="receiving">接收</string>
    <string name="sent">发送</string>
    <string name="copied_to_clipboard">已复制到剪贴板</string>
    <string name="no_transaction_history">暂无交易记录</string>
    <string name="pending">交易处理中(%1$s)</string>
    <string name="completed">交易成功</string>
    <string name="failed">交易失败</string>
    <string name="mpc_failed">MPC计算失败</string>
    <string name="mpc_executing">MPC计算中</string>
    <string name="scan_code">扫码</string>
    <string name="album">相册</string>
    <string name="scanning_qr_code">Scanning...</string>
    <string name="invalid_qr_code">无法识别二维码</string>
    <string name="create_wallet">创建钱包</string>
    <string name="wallet_name">钱包名称</string>
    <string name="wallet_password">设置密码</string>
    <string name="repeat_wallet_password">重复钱包密码</string>
    <string name="hint_repeat_wallet_password">重复钱包密码</string>
    <string name="hint_wallet_password">设置钱包密码(不少于6位)</string>
    <string name="hint_wallet_name">输入钱包名称(1-16字符)</string>
    <string name="wallet_name_required">钱包名称不能为空</string>
    <string name="wallet_name_already_exists">钱包名称已存在</string>
    <string name="wallet_name_bit_error">请输入1~16位钱包名称</string>
    <string name="wallet_password_required">密码不能为空</string>
    <string name="wallet_password_bit_error">密码至少6个字符</string>
    <string name="repeat_password_confirmation_required">确认密码不能为空</string>
    <string name="match_wallet_password">两次密码不一致</string>
    <string name="success">Success</string>
    <string name="create_success">创建成功</string>
    <string name="restore_success">恢复成功</string>
    <string name="backup_wallet">备份钱包</string>
    <string name="backup_wallet_step">Click the button below to back up your escrow wallet fragment. Please save it in a safe place.</string>
    <string name="backup_wallet_ads">One last step,Backup wallet</string>
    <string name="backup_wallet_notice">Note: Please backup your wallet key fragment, you need to use this key fragment to recover when you lose your phone. The backup is completed and will be destroyed automatically!</string>
    <string name="shared_wallet">Shared Wallet</string>
    <string name="no_shared_wallet">No Shared Wallet</string>
    <string name="join">加入钱包</string>
    <string name="settings">设置</string>
    <string name="system_settings">系统设置</string>
    <string name="log_out">登出</string>
    <string name="key_server">密钥服务器</string>
    <string name="node_settings">节点设置</string>
    <string name="language">语言</string>
    <string name="key_information">Key Information</string>
    <string name="restore_wallet">恢复钱包</string>
    <string name="copy_public_key">点击可复制公钥信息</string>
    <string name="backup_wallet_save_path">（Backup files are automatically saved in the album）</string>
    <string name="display_qr_code">Display QR code</string>
    <string name="manage_wallet">钱包管理</string>
    <string name="wallet_mode">钱包类型</string>
    <string name="create_time">创建时间</string>
    <string name="view_wallet_public_key">查看钱包公钥</string>
    <string name="wallet_public_key">查看钱包公钥</string>
    <string name="cancel">取消</string>
    <string name="wechat">微信好友</string>
    <string name="more">更多</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="wx_circle">微信朋友圈</string>
    <string name="share_to">分享到...</string>
    <string name="receiving_wallet">接收钱包</string>
    <string name="confirm">确认</string>
    <string name="wallet">钱包</string>
    <string name="confirmation">提示</string>
    <string name="tv_backup_notice">Wallet is not backed up and cannot be deleted!</string>
    <string name="wallet_password_verification">Wallet password verification</string>
    <string name="delete_wallet_notice">Are you sure to delete the wallet? Please make sure the wallet is safely saved before deleting.</string>
    <string name="enter_wallet_password">输入钱包密码</string>
    <string name="transaction_detail">交易详情</string>
    <string name="tx_type">交易类型</string>
    <string name="txhash">交易hash</string>
    <string name="payment_wallet">支付钱包</string>
    <string name="the_amount_to_send">发送金额</string>
    <string name="note">备注</string>
    <string name="fee">交易费用</string>
    <string name="hint_receive_wallet">输入\长按粘贴接收地址</string>
    <string name="hint_send_amount">输入发送金额</string>
    <string name="hint_optional_node">选填(30字符)</string>
    <string name="available">当前可用：</string>
    <string name="send_confirmation">发送确认</string>
    <string name="recipient">接收地址</string>
    <string name="amount">Amount</string>
    <string name="cheaper">更便宜</string>
    <string name="recommend">推荐</string>
    <string name="faster">更快速</string>
    <string name="create_shared_wallet">Create Shared Wallet</string>
    <string name="signed_user_number">Number of Shared Users(Signed User)</string>
    <string name="hint_set_signed_user_number">共享用户数(签名数)</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="sharewallet_creating">Sharewallet-Creating</string>
    <string name="scan_to_join">Scan to join...</string>
    <string name="next">Next</string>
    <string name="copy_invitation_infomation">点击可复制钱包公钥</string>
    <string name="notice_cancel_create_shared_wallet">The Shared Wallet has not been created yet.Are you sure to cancel the creation</string>
    <string name="scan_shared_owner_qr_code">Scan Shared owner QR code</string>
    <string name="back">返回上一步</string>
    <string name="owner">共享用户%1$d</string>
    <string name="creating">创建中</string>
    <string name="join_shared_wallet">加入共享钱包</string>
    <string name="initiator_public_key">发起者公钥</string>
    <string name="waiting_to_create">等待共享钱包创建</string>
    <string name="jon_success">加入成功</string>
    <string name="share_public_key_qr_code">将下方钱包公钥二维码分享给钱包发起用户</string>
    <string name="backup_share_wallet_notice">点击下方按钮，备份您的共享钱包分量，请务必保存在安全点地方，丢失无法找回</string>
    <string name="mpc_executing_with_dot">MPC计算中...</string>
    <string name="send_amount">发送金额</string>
    <string name="send_time">发送时间</string>
    <string name="end_time">完成时间</string>
    <string name="phone_number">手机号</string>
    <string name="enter_phone_number">请输入手机号</string>
    <string name="sms_code">验证码</string>
    <string name="enter_sms_code">请输入手机验证码</string>
    <string name="hint_search_region_number">输入国家或地区查找</string>
    <string name="get_code">获取验证码</string>
    <string name="resend">重新发送</string>
    <string name="search_no_results">无结果</string>
    <string name="authentication">身份验证</string>
    <string name="verification_code_sender">验证码已发送至</string>
    <string name="didn_t_receive">没收到验证码？</string>
    <string name="loading">加载中...</string>
    <string name="submit">提交</string>
    <string name="wallet_address">钱包地址</string>
    <string name="view_wallet_details">查看钱包详情</string>
    <string name="invalid_receiving_address">接收地址不正确</string>
    <string name="insufficient_balance">余额不足</string>
    <string name="choose_invalid_wallet">选择待恢复的钱包</string>
    <string name="repeat_your_password">确认密码</string>
    <string name="restoring">恢复中</string>
    <string name="sending">发送</string>
    <string name="from">支付钱包</string>
    <string name="to">接收地址</string>
    <string name="exceed_30_characters">超过30字符</string>
    <string name="send_amount_required">发送金额不能为空</string>
    <string name="password">输入密码提交</string>
    <string name="incorrect_wallet_password">请输入正确的钱包密码</string>
    <string name="processing_with_signed_number">交易处理中(%1$s)...</string>
    <string name="processing">交易处理中</string>
    <string name="amount_with_unit">%1$sETH</string>
    <string name="transaction_failed">交易失败</string>
    <string name="transaction_succeed">交易成功</string>
    <string name="no_valid_wallet">无可恢复钱包</string>
    <string name="share_wallet_public_key">分享钱包公钥</string>
    <string name="transactions">交易记录</string>
    <string name="refunded">(退回账户：%1$sETH)</string>
    <string name="share_qr_code">分享收款二维码</string>
    <string name="incorrect_sms_code">验证码错误</string>
    <string name="add_note">新增节点</string>
    <string name="add">新增</string>
    <string name="node_address">节点地址</string>
    <string name="enter_the_node_address">输入节点地址</string>
    <string name="incorrect_node_address">节点地址不正确</string>
    <string name="save_image_tips">图片已保存至系统相册</string>
    <string name="scan_code_tips">将二维码放入框内，即可自动扫描</string>
    <string name="comming_soon">敬请期待</string>
    <string name="delete_node_tips">确定删除该节点地址吗?</string>
    <string name="invalid_node_address">无效的节点地址</string>
    <string name="delete_node_address_failed">删除节点地址失败</string>
    <string name="all">全部</string>
    <string name="default_node">(默认)</string>
    <string name="click_to_copy_the_address">点击可复制接收地址</string>
    <string name="name">名称: %1$s</string>
    <string name="secure_wallet_based_on_mpc">Secure Wallet Based on MPC</string>
    <string name="scan_address_qr_code">扫描钱包地址二维码</string>
</resources>
