<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.kms.demo.component.widget.CommonTitleBar
        android:id="@+id/commonTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ctb_left_drawable="@drawable/icon_navigation_back"
        app:ctb_title="@string/create_custodian_wallet" />

    <TextView
        android:id="@+id/tv_result"
        style="@style/Text.cfd6eb.14"
        android:layout_marginTop="8dp"
        android:drawableTop="@drawable/icon_succeed"
        android:drawablePadding="8dp"
        android:text="@string/create_success" />

    <TextView
        style="@style/Text.8f96a5.12"
        android:layout_gravity="left"
        android:layout_marginTop="32dp"
        android:text="@string/wallet_name" />

    <TextView
        android:id="@+id/tv_wallet_name"
        style="@style/Text.cfd6eb.13"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        tools:text="Sharewallet" />

    <TextView
        style="@style/Text.8f96a5.12"
        android:layout_gravity="left"
        android:layout_marginTop="18dp"
        android:text="@string/wallet_address" />

    <TextView
        android:id="@+id/tv_wallet_address"
        style="@style/Text.cfd6eb.13"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        tools:text="0xA9ed952E3040A0C925d8a718760443A4973e2117" />

    <Button
        android:id="@+id/btn_view_wallet_details"
        style="@style/ButtonWithGradientStyle"
        android:layout_marginTop="32dp"
        android:text="@string/view_wallet_details" />


</LinearLayout>