<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingTop="10dp"
    android:paddingRight="12dp"
    android:paddingBottom="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_qr_code_top"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv_popwindow"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:src="@drawable/icon_popwindow_confirmation" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_qr_code_bottom"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/tv_notice"
            style="@style/Text.cfd6eb.16"
            android:layout_width="match_parent"
            android:text="@string/confirmation" />

        <TextView
            android:id="@+id/tv_confirm_notice"
            style="@style/Text.cfd6eb.16"
            android:layout_marginTop="8dp"
            android:text="@string/delete_wallet_notice" />

        <TextView
            android:id="@+id/tv_wallet_name_title"
            style="@style/Text.a9b0ca.14"
            android:layout_marginTop="24dp"
            android:text="@string/wallet" />

        <TextView
            android:id="@+id/tv_wallet_name"
            style="@style/Text.f1f0f0.12"
            android:layout_marginTop="8dp"
            tools:text="biganxin" />

        <TextView
            android:id="@+id/tv_wallet_Password_title"
            style="@style/Text.a9b0ca.14"
            android:layout_marginTop="24dp"
            android:text="@string/wallet_password" />

        <com.kms.demo.component.widget.CustomUnderlineEditText
            android:id="@+id/et_wallet_password"
            style="@style/EditTextWithUnderlineStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_wallet_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_wallet_password_error"
            style="@style/Text.ff2020.12"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            tools:text="Incorrect Wallet Password" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/ButtonWithGradientStyle"
            android:layout_marginTop="24dp"
            android:text="@string/confirm" />

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/Text.508dff.14"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/cancel" />

    </LinearLayout>


</LinearLayout>
